# kapraxis

./: .clang-format  .gitignore  CMakeLists.txt  README.md  STYLE.md  questoes.db  resources.qrc
.github/workflows/: cmake-single-platform.yml  release.yml
resources/: recourses.qrc
resources/styles/: global.qss  theme-light.qss  theme-palette.qss  theme-soft.qss
src/: main.cpp
src/app/: AppWindow.cpp  AppWindow.h
src/domain/: Questao.h
src/repo/: QuestaoRepoSQLite.cpp  QuestaoRepoSQLite.h  StudyStatsStore.cpp  StudyStatsStore.h  questao_repo_sqlite.cpp  questao_repo_sqlite.h
src/ui/: BlocosPage.cpp  BlocosPage.h  ClipboardTextEdit.cpp  ClipboardTextEdit.h  InicioPage.cpp  InicioPage.h  QuestoesPage.cpp  QuestoesPage.h  RevisaoPage.cpp  RevisaoPage.h  SettingsPage.cpp  SettingsPage.h
src/utils/: ImageStore.cpp  ImageStore.h
translations/: kapraxis_pt_BR.qm  kapraxis_pt_BR.ts
